feat: ✨ Enhance User and Transaction Management APIs
- Introduced `UserUpdateDTO` and `EmailDTO` for cleaner and more structured data transfer during user updates and connections.
- Added `Response` utility class for standardized API responses, improving consistency and readability across controllers.
- Updated `AuthController`, `TransactionController`, and `UserController` methods to use the `Response` class.
- Simplified and removed redundant methods from `UserService`, `TransactionService`, and their respective interfaces.
- Refactored user connection logic to support email-based associations instead of user IDs.
- Improved API documentation by removing obsolete and redundant sections for better clarity.